--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,36 @@ numpy>=1.24.0
 # Logging and debugging
 loguru>=0.7.0
 
-# Development and testing (optional)
+# Visualization
+plotly>=5.17.0
+
+# Development and testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
+pytest-mock>=3.11.0
+pytest-asyncio>=0.21.0
+
+# Code formatting and linting
 black>=23.0.0
 flake8>=6.0.0
+flake8-docstrings>=1.7.0
+flake8-import-order>=0.18.0
+flake8-bugbear>=23.0.0
+isort>=5.12.0
 
-# Type checking (optional)
+# Type checking
 mypy>=1.5.0
 types-requests>=2.31.0
+
+# Security
+bandit>=1.7.5
+safety>=2.3.0
+
+# Documentation
+pydocstyle>=6.3.0
+
+# Git hooks
+pre-commit>=3.4.0
+
+# Coverage reporting
+coverage>=7.3.0
