--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,7 @@
 [flake8]
 max-line-length = 127
 max-complexity = 10
-ignore = 
-    E203,  # whitespace before ':'
-    E501,  # line too long (handled by black)
-    W503,  # line break before binary operator
-    F401,  # imported but unused (handled by isort)
+ignore = E203,E501,W503,F401,C901
 exclude = 
     .git,
     __pycache__,
