--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ addopts =
     --cov-report=html:htmlcov
     --cov-report=term-missing
     --cov-fail-under=80
+    -p no:pdb
 markers =
     unit: 单元测试
     integration: 集成测试
