--- a/pytest.ini
+++ b/pytest.ini
@@ -39,6 +39,7 @@ markers =
     edge_cases: 边界条件测试
     error_handling: 错误处理测试
     performance: 性能测试
+    semantic_coverage: 语义覆盖度测试，识别改进机会，不阻塞CI
     
     # 环境要求标记
     requires_db: 需要数据库的测试
@@ -53,6 +54,8 @@ filterwarnings =
     ignore::UserWarning
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+    # 显示语义覆盖度警告
+    always::tests.test_semantic_coverage_cases.SemanticCoverageWarning
 
 # 日志配置
 log_cli = true
